# MemCP

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.celery  LICENSE  README.md  alembic.ini  docker-compose-dev.yml  docker-compose.yml  docker-entrypoint.sh  main.py  pyproject.toml
.github/workflows/: release-sync.yml  test-sync.yml
alembic/: env.py
alembic/versions/: 215f76b3a0fc_autogenerate_add_timestamps_remove_old_.py  3986c4a77f9d_create_processed_user_profiles_table.py  7863b196ef92_add_server_properties_table.py  9f1a2c3d4e5f_add_oauth_accounts_table.py  aa0b5a1bb1f1_merge_heads_server_props_oauth.py  b82f803be60c_add_default_user_and_fix_metadata_json_.py  de7cfeb9cd83_add_api_key_fields_to_user_model.py
docs/: RUNNING_LOCALLY.md
frontend/: .dockerignore  .gitignore  Dockerfile  astro.config.mjs  package-lock.json  package.json  tsconfig.json
frontend/nginx/: nginx.conf
frontend/src/layouts/: Layout.astro  (+1 more)
scripts/: monitor-health.sh
src/: celery_app.py  mcp.py  memory_manager.py  server.py  tasks.py
src/core/: config.py  context.py  mcp_auth_provider.py  oauth.py  security.py
src/crud/: crud_memory.py  crud_oauth.py  crud_processed_user_profile.py  crud_server_property.py  crud_user.py
src/db/: __init__.py  database.py  models.py
src/exceptions/: __init__.py  auth.py  base.py  database.py  external_service.py  handlers.py  memory.py
src/middlewares/: __init__.py  mcp_auth_middleware.py  mcp_oauth_hint_middleware.py  mcp_oauth_redirect_middleware.py  mcp_path_auth_middleware.py
src/nlp/: prompts.py  synthesize_user_profile.py
src/routers/: auth.py  memory.py  oauth.py
src/schemas/: graph.py  memory.py  token.py  user.py
src/services/: __init__.py  graph_service.py
src/tests/: test_database.py  test_race_condition.py  test_user_context_isolation.py
src/utils/: auth_cache.py  embedding.py  health.py  mcp_context.py  profile_processor.py  redis_client.py  tag_parser.py  user_cache.py  vector_store.py
(+51 files in other folders)
