[project]
name = "memory-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.15.2",
    "fastmcp>=2.3.4",
    "openai>=1.79.0",
    "psycopg2-binary>=2.9.10",
    "pytest>=8.3.5",
    "pytest-dotenv>=0.5.2",
    "python-dotenv>=1.1.0",
    "qdrant-client>=1.14.2",
    "sqlalchemy>=2.0.41",
]
